--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node App.js"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
