--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@googlemaps/react-wrapper": "^1.1.35",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
