--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "swiper": "^11.1.1"
   },
