--- a/src/services/PlacesService/Dockerfile
+++ b/src/services/PlacesService/Dockerfile
@@ -16,7 +16,9 @@ EXPOSE 8003
 # Step 6: Set environment variables, such as Flask environment
 ENV FLASK_APP=PlacesService/GooglePlacesService.py
 ENV FLASK_RUN_PORT=8003
+ENV FLASK_RUN_HOST=0.0.0.0
 ENV FLASK_ENV=development
 
 # Step 7: Define the command to run when the container starts
+# CMD ["flask", "run", "--host", "0.0.0.0"]
 CMD ["flask", "run"]
