--- a/src/services/requirements.txt
+++ b/src/services/requirements.txt
@@ -5,7 +5,7 @@ httpx==0.28.1
 pydantic==2.11.4
 pymongo==4.12.1
 python-dotenv==1.1.0
-redis==6.0.0
+redis>=4.5.0,<6.0.0
 Requests==2.32.3
 rq==2.3.3
 uvicorn==0.34.2
